--- a/frontend/index.less
+++ b/frontend/index.less
@@ -83,7 +83,7 @@ button{
 
 //-------------------   MAIN STYLES  -----------------------------
 
-@pink:#ff625e;
+@pink:#FE82A4;
 @blue:#89ABE3;
 
 body{
@@ -104,11 +104,17 @@ body{
 .pink-button{
   padding: 15px 20px;
   text-transform: uppercase;
-  background: darken(@pink,7%);
+  background: darken(@pink,5%);
   width: 100%;
   margin-top: 20px;
   color: #fff;
   font-weight: bold;
+  cursor: pointer;
+  .transition();
+  font-size: 1em;
+  &:hover{
+    .shadow(0px,0px,30px,darken(@pink,15%))
+  }
 }
 
 
@@ -128,6 +134,7 @@ body{
   padding:7px 0 0 12px;
   transform: rotate(90deg);
   font-size: 30px;
+  z-index: 9999999;
   &:hover,&:active,&:visited,&:focus{
     text-decoration: none;
     color: #ffffff;
@@ -138,11 +145,21 @@ body{
 .header{
   display: flex;
   justify-content:space-between;
-  background: @blue;
   color: #ffffff;
-  padding: 30px;
-  padding-bottom: 0;
+  padding: 20px;
   font-size: 25px;
+ background: @pink;
+}
+
+.scroll{
+  padding: 20px;
+  position: fixed;
+  display: flex;
+  justify-content:space-between;
+  z-index: 99;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 .section_1{
@@ -312,7 +329,7 @@ body{
     .rounded(100%);
     padding: 5px 10px;
     margin:0  10px 0px 0;
-    background: @pink;
+    background: darken(@pink,10%);
     text-align: center;
     color: #ffffff;
   }
@@ -324,15 +341,13 @@ body{
 }
 
 .section_5{
-  background: @pink;
+  background: darken(@blue,10%);
   color: #fff;
-  padding: 65px;
+  padding: 20px;
 }
 
 
 .slide{
-
-  padding: 30px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -345,7 +360,7 @@ body{
     background-position: center center;
     background-size: cover;
     .rounded(100%);
-    border: 5px solid @blue;
+    border: 10px solid @pink;
   }
 
   &_text{
@@ -359,17 +374,114 @@ body{
   }
 }
 
+.title{
+  font-size: 25px;
+  font-weight: bold;
+}
+
+
+// -------------------- MODAL --------------------
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 100; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  border: 3px dashed @blue;
+  margin: 0 auto;
+  margin-top: 100px;
+  position: relative;
+  background-color: #fefefe;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px; /* Full width */
+  min-width: 200px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+
+  .title{
+    font-size: 20px;
+    text-align: center;
+    color: darken(@blue,10%);
+    margin: 20px 0;
+    font-weight: normal;
+  }
+}
+
+.error{
+  display: none;
+  text-align: center;
+  color: red;
+}
+
+.congrats{
+  display: none;
+  text-align: center;
+  font-size: 22px;
+  color: @blue;
+  margin-top: 20px;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  color: @pink;
+  float: right;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 20px 16px;
+}
+
+.modal-body {
+  padding: 15px 16px;
+  input{
+    width: 100%;
+    margin-bottom: 15px;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid @blue;
+    padding:7px;
+  }
+}
+
+.modal-footer {
+  padding: 20px 16px;
+  color: white;
+}
+
 
 //-------------------   MAIN STYLES END -----------------------------
 
 
 
 /*==========  MEDIA  ==========*/
-/* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px) {
-
-}
-
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
     .main-img{
@@ -412,6 +524,7 @@ body{
 
   .section_1{
     font-size: 14px;
+    height: 580px;
   }
 
   .section_4{
