--- a/public/index.css
+++ b/public/index.css
@@ -1,1 +1,740 @@
-*,.scrollToTop{box-sizing:border-box}.clock,.slide{text-align:center;-webkit-box-orient:vertical;-webkit-box-direction:normal}.ng-cloak,.x-ng-cloak,[data-ng-cloak],[ng-cloak],[ng\:cloak],[x-ng-cloak]{display:none!important}a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}.section>.title,body{font-family:Verdana,sans-serif}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}button{outline:0;border:0}.section{padding:90px}.section>.title{text-align:center;font-size:30px;font-weight:700;margin-bottom:50px}.pink-button{padding:15px 20px;text-transform:uppercase;background:#ff3f3a;width:100%;margin-top:20px;color:#fff;font-weight:700}.scrollToTop{cursor:pointer;width:50px;height:50px;font-weight:700;color:#fff;text-decoration:none;position:fixed;right:5px;bottom:40px;border-radius:50%;background:#90ee90;padding:7px 0 0 12px;-webkit-transform:rotate(90deg);transform:rotate(90deg);font-size:30px}.header,.section_1,.section_3{background:#89ABE3}.scrollToTop:active,.scrollToTop:focus,.scrollToTop:hover,.scrollToTop:visited{text-decoration:none;color:#fff;outline:0}.header{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;color:#fff;padding:30px 30px 0;font-size:25px}.section_1{font-size:16px;padding-top:40px;height:530px;width:100 wh;font-weight:700;color:#fff}.section_1 .title{color:#fff;font-size:2.5em}.section_1_bottom{-ms-flex-pack:distribute;justify-content:space-around;display:-webkit-box;display:-ms-flexbox;display:flex}.about,.about-text{display:inline-block}.main-img{margin-top:50px}.about .icon{vertical-align:middle;width:35px;height:35px}.about-text{font-size:.875em;margin-left:10px;margin-bottom:30px}.clock,.section_2_content{display:-webkit-box;display:-ms-flexbox}.section_2{margin-top:100px}.section_2 .title{color:#89ABE3}.section_2_content{display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-align:start;-ms-flex-align:start;align-items:flex-start}.clock{border:2px solid #89ABE3;border-radius:5px;padding:20px;display:flex;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start;margin:20px 0 20px 5%;width:300px;-webkit-transition:.5s;transition:.5s}.function,.section_3_content{display:-webkit-box;display:-ms-flexbox}.clock:hover{box-shadow:0 0 15px #89ABE3}.clock-img{width:100%;height:auto}.clock .title{color:#555;font-weight:700;margin-bottom:20px}.clock .descr{margin-top:15px;font-size:14px;font-weight:lighter}.clock .price{color:#ff625e;margin-top:15px;text-align:center;font-weight:700}.section_3{color:#fff}.section_3_content{display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-wrap:wrap;flex-wrap:wrap}.section_3_text{display:inline-block;margin-left:15px}.section_3_text .title{text-transform:uppercase;font-weight:700;font-size:18px;margin-bottom:15px}.section_3_text .descr{font-weight:lighter}.function{font-size:16px;width:30%;margin-left:20px;margin-bottom:50px;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.left-col .reason,.section_4_content{display:-webkit-box;display:-ms-flexbox}.function .icon{box-shadow:6px 7px 1px #777;border:3px solid #fff;padding:.9375em 1.25em;border-radius:100%;background:#ff625e;-webkit-transition:.5s;transition:.5s}.function .fa{color:#fff;font-size:1.56em}.section_4{background:#fefefe;margin:70px 0}.section_4>.title{color:#89ABE3}.section_4_content{display:flex;-ms-flex-pack:distribute;justify-content:space-around}.left-col{color:#666;margin-right:20px}.left-col .number,.section_5{background:#ff625e;color:#fff}.left-col .reason{display:flex;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:start;-webkit-box-align:center;-ms-flex-align:center;align-items:center;margin-bottom:50px}.left-col .number{border-radius:100%;padding:5px 10px;margin:0 10px 0 0;text-align:center}.main-video{width:560px;height:300px}.section_5{padding:65px}.slide{padding:30px;display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.slide_img{width:250px;height:250px;background:url(assets/img/men.jpg) center center no-repeat;background-size:cover;border-radius:100%;border:5px solid #89ABE3}.slide_text .title{margin:20px 0;font-weight:700;text-transform:uppercase;font-size:19px}@media only screen and (max-width:992px){.main-img{display:none}.about-text{font-size:1.25em}.section_2{margin-top:0}.main-video{width:420px;height:250px}}@media only screen and (max-width:820px){.function{width:45%}.section_4_content{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center}}@media only screen and (max-width:669px){.section{padding:50px}.section_1{font-size:14px}.section_4{margin:0}.scrollToTop{width:40px;height:40px;padding:8px 0 0 11px;font-size:20px;bottom:20px}.clock{width:500px}.function{width:100%;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;text-align:center;font-size:19px}.function .icon{margin-bottom:20px}}@media only screen and (max-width:450px){.header{font-size:20px}.section{padding:30px}.section_1{font-size:13px}.main-video{width:300px;height:200px}}
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+  display: none !important;
+}
+
+/* -------------------    RESET.CSS ----------------------------*/
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+button {
+  outline: none;
+  border: 0;
+}
+
+/* -------------------    RESET.CSS END----------------------------*/
+
+body {
+  font-family: Verdana, sans-serif;
+}
+
+.section {
+  padding: 90px;
+}
+
+.section > .title {
+  font-family: Verdana, sans-serif;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 50px;
+}
+
+.pink-button {
+  padding: 15px 20px;
+  text-transform: uppercase;
+  background: #fe6992;
+  width: 100%;
+  margin-top: 20px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  -webkit-transition: .5s;
+  transition: .5s;
+  font-size: 1em;
+}
+
+.pink-button:hover {
+  box-shadow: 0px 0px 30px #fd366d;
+}
+
+.scrollToTop {
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  box-sizing: border-box;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+  position: fixed;
+  right: 5px;
+  bottom: 40px;
+  border-radius: 50%;
+  background: lightgreen;
+  padding: 7px 0 0 12px;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  font-size: 30px;
+  z-index: 9999999;
+}
+
+.scrollToTop:hover,
+.scrollToTop:active,
+.scrollToTop:visited,
+.scrollToTop:focus {
+  text-decoration: none;
+  color: #ffffff;
+  outline: none;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  color: #ffffff;
+  padding: 20px;
+  font-size: 25px;
+  background: #FE82A4;
+}
+
+.scroll {
+  padding: 20px;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  z-index: 99;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.section_1 {
+  font-size: 16px;
+  padding-top: 40px;
+  background: #89ABE3;
+  height: 530px;
+  width: 100 wh;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.section_1 .title {
+  color: #fff;
+  font-size: 2.5em;
+}
+
+.section_1_bottom {
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main-img {
+  margin-top: 50px;
+}
+
+.about {
+  display: inline-block;
+}
+
+.about .icon {
+  vertical-align: middle;
+  width: 35px;
+  height: 35px;
+}
+
+.about-text {
+  font-size: 0.875em;
+  display: inline-block;
+  margin-left: 10px;
+  margin-bottom: 30px;
+}
+
+.section_2 {
+  margin-top: 100px;
+}
+
+.section_2 .title {
+  color: #89ABE3;
+}
+
+.section_2_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.clock {
+  border: 2px solid #89ABE3;
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  margin: 20px 0 20px 5%;
+  width: 300px;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.clock:hover {
+  box-shadow: 0 0 15px #89ABE3;
+}
+
+.clock-img {
+  width: 100%;
+  height: auto;
+}
+
+.clock .title {
+  color: #555;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.clock .descr {
+  margin-top: 15px;
+  font-size: 14px;
+  font-weight: lighter;
+}
+
+.clock .price {
+  color: #FE82A4;
+  margin-top: 15px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.section_3 {
+  background: #89ABE3;
+  color: #fff;
+}
+
+.section_3_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.section_3_text {
+  display: inline-block;
+  margin-left: 15px;
+}
+
+.section_3_text .title {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+
+.section_3_text .descr {
+  font-weight: lighter;
+}
+
+.function {
+  font-size: 16px;
+  width: 30%;
+  margin-left: 20px;
+  margin-bottom: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.function .icon {
+  box-shadow: 6px 7px 1px #777;
+  border: 3px solid #fff;
+  padding: 0.9375em 1.25em;
+  border-radius: 100%;
+  background: #FE82A4;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.function .fa {
+  color: #fff;
+  font-size: 1.56em;
+}
+
+.section_4 {
+  background: #fefefe;
+  margin: 70px 0;
+}
+
+.section_4 > .title {
+  color: #89ABE3;
+}
+
+.section_4_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+}
+
+.left-col {
+  color: #666;
+  margin-right: 20px;
+}
+
+.left-col .reason {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.left-col .number {
+  border-radius: 100%;
+  padding: 5px 10px;
+  margin: 0  10px 0px 0;
+  background: #fe4f7f;
+  text-align: center;
+  color: #ffffff;
+}
+
+.main-video {
+  width: 560px;
+  height: 300px;
+}
+
+.section_5 {
+  background: #608ed9;
+  color: #fff;
+  padding: 20px;
+}
+
+.slide {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.slide_img {
+  width: 250px;
+  height: 250px;
+  background: url("assets/img/men.jpg") no-repeat;
+  background-position: center center;
+  background-size: cover;
+  border-radius: 100%;
+  border: 10px solid #FE82A4;
+}
+
+.slide_text .title {
+  margin: 20px 0px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 19px;
+}
+
+.title {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 100;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: #000000;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content */
+
+.modal-content {
+  border: 3px dashed #89ABE3;
+  margin: 0 auto;
+  margin-top: 100px;
+  position: relative;
+  background-color: #fefefe;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  /* Full width */
+  min-width: 200px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+.modal-content .title {
+  font-size: 20px;
+  text-align: center;
+  color: #608ed9;
+  margin: 20px 0;
+  font-weight: normal;
+}
+
+.error {
+  display: none;
+  text-align: center;
+  color: red;
+}
+
+.congrats {
+  display: none;
+  text-align: center;
+  font-size: 22px;
+  color: #89ABE3;
+  margin-top: 20px;
+}
+
+/* Add Animation */
+
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+/* The Close Button */
+
+.close {
+  color: #FE82A4;
+  float: right;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 20px 16px;
+}
+
+.modal-body {
+  padding: 15px 16px;
+}
+
+.modal-body input {
+  width: 100%;
+  margin-bottom: 15px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #89ABE3;
+  padding: 7px;
+}
+
+.modal-footer {
+  padding: 20px 16px;
+  color: white;
+}
+
+/*==========  MEDIA  ==========*/
+
+/* Medium Devices, Desktops */
+
+@media only screen and (max-width: 992px) {
+  .main-img {
+    display: none;
+  }
+
+  .about-text {
+    font-size: 1.25em;
+  }
+
+  .section_2 {
+    margin-top: 0px;
+  }
+
+  .main-video {
+    width: 420px;
+    height: 250px;
+  }
+}
+
+/* Small Devices, Tablets */
+
+@media only screen and (max-width: 820px) {
+  .function {
+    width: 45%;
+  }
+
+  .section_4_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+
+/* Extra Small Devices, Phones */
+
+@media only screen and (max-width: 669px) {
+  .section {
+    padding: 50px;
+  }
+
+  .section_1 {
+    font-size: 14px;
+    height: 580px;
+  }
+
+  .section_4 {
+    margin: 0;
+  }
+
+  .scrollToTop {
+    width: 40px;
+    height: 40px;
+    padding: 8px 0 0 11px;
+    font-size: 20px;
+    bottom: 20px;
+  }
+
+  .clock {
+    width: 500px;
+  }
+
+  .function {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+    font-size: 19px;
+  }
+
+  .function .icon {
+    margin-bottom: 20px;
+  }
+}
+
+/* Custom, iPhone Retina */
+
+@media only screen and (max-width: 450px) {
+  .header {
+    font-size: 20px;
+  }
+
+  .section {
+    padding: 30px;
+  }
+
+  .section_1 {
+    font-size: 13px;
+  }
+
+  .main-video {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+/* ------------------  MEDIA END-------------------------------*/
