--- a/frontend/index.less
+++ b/frontend/index.less
@@ -113,7 +113,7 @@ body{
   .transition();
   font-size: 1em;
   &:hover{
-    .shadow(0px,0px,30px,darken(@pink,15%))
+    .shadow(0px,0px,20px,darken(@pink,15%));
   }
 }
 
@@ -352,7 +352,6 @@ body{
   display: flex;
   flex-direction: column;
   align-items:center;
-
   &_img{
     width: 250px;
     height: 250px;
@@ -370,7 +369,6 @@ body{
       text-transform: uppercase;
       font-size: 19px;
     }
-    .descr{}
   }
 }
 
@@ -379,33 +377,50 @@ body{
   font-weight: bold;
 }
 
+.section_6{
+  font-size: 16px;
+  background: #eee;
+  color: #444;
+  text-align: center;
+  .icon{
+    font-size: 4em;
+    margin-bottom: 20px;
+    color: darken(@pink,20%);
+  }
+  .text{
+    line-height: 20px;
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
 
 // -------------------- MODAL --------------------
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 100; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  position: fixed;
+  z-index: 100;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
 /* Modal Content */
 .modal-content {
   border: 3px dashed @blue;
   margin: 0 auto;
-  margin-top: 100px;
   position: relative;
   background-color: #fefefe;
   padding: 0;
   border: 1px solid #888;
   width: 80%;
-  max-width: 400px; /* Full width */
+  max-width: 400px;
+  max-width: 400px;
   min-width: 200px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
@@ -434,6 +449,7 @@ body{
   font-size: 22px;
   color: @blue;
   margin-top: 20px;
+  padding: 20px;
 }
 
 /* Add Animation */
@@ -456,11 +472,11 @@ body{
 }
 
 .modal-header {
-  padding: 20px 16px;
+  padding: 15px;
 }
 
 .modal-body {
-  padding: 15px 16px;
+  padding: 20px;
   input{
     width: 100%;
     margin-bottom: 15px;
@@ -472,8 +488,9 @@ body{
 }
 
 .modal-footer {
-  padding: 20px 16px;
+  padding: 5px;
   color: white;
+
 }
 
 
@@ -518,6 +535,11 @@ body{
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 669px) {
+
+  .header{
+    font-size: 18px;
+  }
+
   .section{
     padding: 50px;
   }
@@ -556,11 +578,6 @@ body{
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 450px) {
-
-  .header{
-    font-size: 20px;
-  }
-
   .section{
     padding: 30px;
   }
