--- a/public/index.css
+++ b/public/index.css
@@ -183,7 +183,7 @@ body {
 }
 
 .pink-button:hover {
-  box-shadow: 0px 0px 30px #fd366d;
+  box-shadow: 0px 0px 20px #fd366d;
 }
 
 .scrollToTop {
@@ -509,27 +509,37 @@ body {
   font-weight: bold;
 }
 
+.section_6 {
+  font-size: 16px;
+  background: #eee;
+  color: #444;
+  text-align: center;
+}
+
+.section_6 .icon {
+  font-size: 4em;
+  margin-bottom: 20px;
+  color: #fd1d5a;
+}
+
+.section_6 .text {
+  line-height: 20px;
+  width: 80%;
+  margin: 0 auto;
+}
+
 .modal {
   display: none;
-  /* Hidden by default */
   position: fixed;
-  /* Stay in place */
   z-index: 100;
-  /* Sit on top */
   padding-top: 100px;
-  /* Location of the box */
   left: 0;
   top: 0;
   width: 100%;
-  /* Full width */
   height: 100%;
-  /* Full height */
   overflow: auto;
-  /* Enable scroll if needed */
   background-color: #000000;
-  /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -537,14 +547,12 @@ body {
 .modal-content {
   border: 3px dashed #89ABE3;
   margin: 0 auto;
-  margin-top: 100px;
   position: relative;
   background-color: #fefefe;
   padding: 0;
   border: 1px solid #888;
   width: 80%;
   max-width: 400px;
-  /* Full width */
   min-width: 200px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
@@ -573,6 +581,7 @@ body {
   font-size: 22px;
   color: #89ABE3;
   margin-top: 20px;
+  padding: 20px;
 }
 
 /* Add Animation */
@@ -611,11 +620,11 @@ body {
 }
 
 .modal-header {
-  padding: 20px 16px;
+  padding: 15px;
 }
 
 .modal-body {
-  padding: 15px 16px;
+  padding: 20px;
 }
 
 .modal-body input {
@@ -628,7 +637,7 @@ body {
 }
 
 .modal-footer {
-  padding: 20px 16px;
+  padding: 5px;
   color: white;
 }
 
@@ -676,6 +685,10 @@ body {
 /* Extra Small Devices, Phones */
 
 @media only screen and (max-width: 669px) {
+  .header {
+    font-size: 18px;
+  }
+
   .section {
     padding: 50px;
   }
@@ -719,10 +732,6 @@ body {
 /* Custom, iPhone Retina */
 
 @media only screen and (max-width: 450px) {
-  .header {
-    font-size: 20px;
-  }
-
   .section {
     padding: 30px;
   }
