--- a/frontend/index.less
+++ b/frontend/index.less
@@ -127,12 +127,13 @@ body{
   color: #fff;
   text-decoration: none;
   position:fixed;
-  right: 5px;
+  right: 10px;
   bottom: 40px;
   border-radius:50% ;
   background: lightgreen;
-  padding:7px 0 0 12px;
-  transform: rotate(90deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 30px;
   z-index: 9999999;
   &:hover,&:active,&:visited,&:focus{
@@ -142,20 +143,27 @@ body{
   }
 }
 
+.shake{
+
+}
+
 .header{
   display: flex;
   justify-content:space-between;
+  align-items: center;
   color: #ffffff;
-  padding: 20px;
+  padding: 10px;
   font-size: 25px;
  background: @pink;
 }
 
+.logo{
+  width: 100px;
+  height: 50px;
+}
+
 .scroll{
-  padding: 20px;
   position: fixed;
-  display: flex;
-  justify-content:space-between;
   z-index: 99;
   width: 100%;
   top: 0;
@@ -412,7 +420,6 @@ body{
 
 /* Modal Content */
 .modal-content {
-  border: 3px dashed @blue;
   margin: 0 auto;
   position: relative;
   background-color: #fefefe;
@@ -450,17 +457,6 @@ body{
   color: @blue;
   margin-top: 20px;
   padding: 20px;
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
-}
-
-@keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
 }
 
 /* The Close Button */
