--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,71 @@
+@-webkit-keyframes shake {
+  from, to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0);
+  }
+}
+
+@keyframes shake {
+  from, to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0);
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;
+  }
+}
+
+.shake {
+  -webkit-animation-name: shake;
+  animation-name: shake;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+}
+
+/* Add Animation */
+
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
 [ng\:cloak],
 [ng-cloak],
 [data-ng-cloak],
@@ -195,13 +263,19 @@ body {
   color: #fff;
   text-decoration: none;
   position: fixed;
-  right: 5px;
+  right: 10px;
   bottom: 40px;
   border-radius: 50%;
   background: lightgreen;
-  padding: 7px 0 0 12px;
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-size: 30px;
   z-index: 9999999;
 }
@@ -222,21 +296,22 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   color: #ffffff;
-  padding: 20px;
+  padding: 10px;
   font-size: 25px;
   background: #FE82A4;
 }
 
+.logo {
+  width: 100px;
+  height: 50px;
+}
+
 .scroll {
-  padding: 20px;
   position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
   z-index: 99;
   width: 100%;
   top: 0;
@@ -545,7 +620,6 @@ body {
 /* Modal Content */
 
 .modal-content {
-  border: 3px dashed #89ABE3;
   margin: 0 auto;
   position: relative;
   background-color: #fefefe;
@@ -582,32 +656,6 @@ body {
   color: #89ABE3;
   margin-top: 20px;
   padding: 20px;
-}
-
-/* Add Animation */
-
-@-webkit-keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-
-  to {
-    top: 0;
-    opacity: 1;
-  }
-}
-
-@keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-
-  to {
-    top: 0;
-    opacity: 1;
-  }
 }
 
 /* The Close Button */
