--- a/frontend/index.less
+++ b/frontend/index.less
@@ -152,14 +152,14 @@ body{
   justify-content:space-between;
   align-items: center;
   color: #ffffff;
-  padding: 10px;
+  padding: 10px 40px;
   font-size: 25px;
  background: @pink;
 }
 
 .logo{
-  width: 100px;
-  height: 50px;
+  width: 130px;
+  height: 60px;
 }
 
 .scroll{
@@ -519,6 +519,11 @@ body{
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 820px) {
+
+  .section_1{
+    height: 600px;
+  }
+
   .function{
     width:45%;
   }
@@ -534,6 +539,12 @@ body{
 
   .header{
     font-size: 18px;
+    padding: 10px;
+  }
+
+  .logo{
+    width: 90px;
+    height: 45px;
   }
 
   .section{
@@ -552,13 +563,16 @@ body{
   .scrollToTop{
     width:40px;
     height:40px;
-    padding:8px 0 0 11px;
     font-size: 20px;
     bottom: 20px;
   }
 
   .clock{
-    width: 500px;
+    width: 100%;
+  }
+
+  .section_3_content,.section_2_content{
+      flex-direction: column;
   }
 
   .function{
