--- a/frontend/index.less
+++ b/frontend/index.less
@@ -690,7 +690,6 @@ body{
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 669px) {
-
   .header{
     font-size: 18px;
     padding: 10px;
@@ -723,6 +722,7 @@ body{
 
   .clock{
     width: 100%;
+    margin-left: 0;
   }
 
   .section_3_content,.section_2_content{
@@ -737,6 +737,16 @@ body{
     font-size: 19px;
     .icon{
       margin-bottom: 20px;
+    }
+  }
+
+  .section_8_content{
+    flex-direction: column;
+    .arrow{
+      display: none;
+    }
+    .function{
+      margin-top: 20px;
     }
   }
 
