--- a/public/index.css
+++ b/public/index.css
@@ -957,6 +957,7 @@ body {
 
   .clock {
     width: 100%;
+    margin-left: 0;
   }
 
   .section_3_content,
@@ -980,6 +981,21 @@ body {
 
   .function .icon {
     margin-bottom: 20px;
+  }
+
+  .section_8_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .section_8_content .arrow {
+    display: none;
+  }
+
+  .section_8_content .function {
+    margin-top: 20px;
   }
 
   .footer {
